# photone-ai

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
luts/: yashica_electro_35.cube
public/luts/: canon_a1_standard.cube  yashica_mat_124g_bw.cube
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20250504000000_initial.sql
src-tauri/src/: commands.rs  config.rs  edit_delta.rs  lib.rs  main.rs
src-tauri/src/ai/: engine.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/image_io/: processor.rs
src/api/: ipc.ts
src/components/AIChat/: AIChatPanel.tsx
src/components/Editor/: AdjustmentSliders.tsx  EditorCanvas.tsx  HistogramStub.tsx
src/components/Layout/: AppShell.tsx
src/components/Settings/: SettingsDialog.tsx
src/engine/: cubeLut.ts  pipeline.ts
src/engine/shaders/: grade.frag
src/store/: useEditorStore.ts
src/styles/: tokens.css
src/types/: editor.ts
