[package]
name = "photone_ai"
version = "0.1.0"
description = "Photone AI — cross-platform photo editor"
authors = ["you"]
edition = "2021"

[lib]
name = "photone_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
keyring = "3"
uuid = { version = "1", features = ["v4"] }
